--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	atoms[i].label = chararray[charidx] + "0";
     }
 
-    addMolecule(["e8","b1","b1","b1","b1","f1"],10,20,atoms);
+    addMolecule(["e8","b1","a1","d1","d1","b1","c1","f1"],10,20,atoms);
     // events:
 
     function onMouseMove( evt )
