--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script>
     
 var withReversibility = false;
+var withTemperatureGradient = false;
 
 var chararray = [ 'a', 'b', 'c', 'd', 'e', 'f' ];
 var canvas  = document.getElementById( 'myCanvas' );
