Added link to the Organic Builder paper

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ They replicate by pulling in matching atoms from the surrounding bath.</p>
 
 <p>Reactions happen between pairs of atoms, and can bond or unbond them and change their states. All reactions are reversible with equal probability. Bonding reactions are energetically downhill, unbonding reactions are uphill.</p>
 
-<p>The reactions in our system are listed below. Types 'x' and 'y' are variables which match any type a-f. These rules are designed to let <i>any</i> sequence e{abcd}*f replicate. Credit to Dave Mann for inventing this form of template-replication (see the Organic Builder paper).</p>
+<p>The reactions in our system are listed below. Types 'x' and 'y' are variables which match any type a-f. These rules are designed to let <i>any</i> sequence e{abcd}*f replicate. Credit to Dave Mann for inventing this form of template-replication (see the Organic Builder paper: <a href="http://www.sq3.org.uk/papers/ob_report.pdf">PDF</a></a>).</p>
 
 <p><pre><tt>    
     x1yD    -> xDy1    // message-passing
